// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Arrow 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
  <span
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
    <svg
      height="15.999999999999998"
      preserveAspectRatio="xMaxYMax"
      style="position: absolute; top: 0px; left: 0px; transform: translateX(-50%);"
      viewBox="0 0 15.999999999999998 8"
      width="15.999999999999998"
    >
      <path
        d="M 0 8 H 15.999999999999998 C 8.999999999999998 1 7.999999999999999 0 7.999999999999999 0 C 7.999999999999999 0 6.999999999999999 1 0 8"
        fill="white"
        stroke="black"
        stroke-width="0"
      />
      <path
        d="M 0 8 H 15.999999999999998 L 15.999999999999998 8 H 0 Z"
        fill="white"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Close 1`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`Close 2`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
    <span
      class="popover__content"
      style="position: fixed; top: 0px; left: 0px;"
    >
      Text render
    </span>
  </div>
</DocumentFragment>
`;

exports[`Close 3`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`CustomTagName 1`] = `
<DocumentFragment>
  <section
    class="popover__trigger"
  >
    Text trigger
  </section>
</DocumentFragment>
`;

exports[`CustomTagName 2`] = `
<DocumentFragment>
  <section
    class="popover__trigger"
  >
    Text trigger
  </section>
  <span
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
  </span>
</DocumentFragment>
`;

exports[`Default use 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Default use 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
  <span
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
  </span>
</DocumentFragment>
`;

exports[`Element 1`] = `
<DocumentFragment>
  <span
    class="popover__trigger"
  >
    <a
      href="#"
    >
      Text trigger
    </a>
  </span>
</DocumentFragment>
`;

exports[`Element 2`] = `
<DocumentFragment>
  <span
    class="popover__trigger"
  >
    <a
      href="#"
    >
      Text trigger
    </a>
  </span>
  <span
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
  </span>
</DocumentFragment>
`;

exports[`Hover 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Hover 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Icon trigger 1`] = `
<DocumentFragment>
  <span
    class="popover__trigger"
  >
    <svg
      height="24"
      role="Trigger"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Icon trigger 2`] = `
<DocumentFragment>
  <span
    class="popover__trigger"
  >
    <svg
      height="24"
      role="Trigger"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <span
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
  </span>
</DocumentFragment>
`;

exports[`Render function 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Render function 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
  <span
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
  </span>
</DocumentFragment>
`;
